--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "homepage": "https://github.com/nabilelbajdi/greentech-project-backend#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "path": "^0.12.7",
-    "socket.io": "^4.6.1",
     "express-jwt": "^8.4.1",
     "express-jwt-permissions": "^1.3.7",
-    "express-oauth2-jwt-bearer": "^1.4.1"
+    "express-oauth2-jwt-bearer": "^1.4.1",
+    "jsonwebtoken": "^9.0.0",
+    "path": "^0.12.7",
+    "socket.io": "^4.6.1"
   }
 }
