--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express-oauth2-jwt-bearer": "^1.4.1",
     "jsonwebtoken": "^9.0.0",
     "path": "^0.12.7",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "prisma": "^4.14.0"
