--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,9 @@ build:
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
     - docker push $CI_REGISTRY_IMAGE:latest
-#  rules:
-#    - exists: 
-#      - $SKIP_BUILD
+  rules:
+    - exists: 
+      - $SKIP_BUILD
 
 lint:
   stage: lint
